# tokenomics

./: .gitignore  .mypy.ini  README.md  blog-matrix.md  blog-tokenomics.md  dashboard_app.py  justfile  main.py  pyproject.toml  stablecoin-paper.md  tokenomics_app.py
blog-posts/: blog-matrix-sb2022.md  blog-matrix.md  blog-tokenomics.md
blog-posts/archive/: blog-matrix.md
data/: INFLATION_DISTRIBUTION_1.xlsx  create_csvs.py  token_distribution.csv
litepaper/: litepaper-v1.tex  naacl2021.sty
pkg/: const.py  decay.py  groups.py  plotter.py  vesting.py
plots/: token_release_schedule.html
slides/: Matrix Protocol - SlideDeck.pptx
whitepaper/: litepaper-v1.md
whitepaper/LITEPAPER 01-21/: aapm4-2.rtx  aps11pt4-2.rtx  apsrmp4-2.rtx  apssamp.bib  litepaper-matrix.aux  litepaper-matrix.tex  ltxdocext.sty  ltxfront.sty  ltxgrid.sty  revsymb4-2.sty  useless
whitepaper/LITEPAPER 01-21/old/: aapmsamp.aux  aipsamp.aux  apssamp.aux  apssamp.bib  main.aux  main.tex  main1.tex  main2.toc  mainNotes.bib  sorsamp.blg
whitepaper/LITEPAPER 01-21/revtex-tds/bibtex/bst/revtex/: aapmrev4-2.bst  aipauth4-2.bst  aipnum4-2.bst  apsrmp4-2.bst
whitepaper/LITEPAPER 01-21/revtex-tds/tex/latex/revtex/: aip4-2.rtx  aps10pt4-2.rtx  aps12pt4-2.rtx  aps4-2.rtx  ltxutil.sty  revtex4-2.cls  sor4-2.rtx
