[tool.poetry]
name = "research"
version = "0.0.1"
description = "Original research repository for Nibiru Chain."
authors = ["Nibiru Chain <dev@nibiru.fi>"]
license = ""
readme = "README.md" # similar to long_description in setuptools
repository = "https://github.com/NibiruChain/research"
keywords = ["nibiru", "blockchain", "sdk", "python", "nibiru-chain"]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
]
packages = [{ include = "pkg" }]

[tool.poetry.dependencies]
python = "^3.8"
bech32 = "^1.2.0"
python-dotenv = "^0.21.0"
requests = "^2.32.0"
hdwallets = "^0.1.2"
pre-commit = "^2.20.0"
shutup = "^0.2.0"
websocket-client = "^1.4.1"
packaging = "^21.3"
bip32 = "^3.3"
importlib-metadata = "^5.0.0"
dash = "^2.9.1"
plotly = "^5.13.1"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
tk = "^0.1.0"
jupyter = "^1.0.0"
notebook = "^6.5.3"
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]
pytest-skip-slow = "^0.0.3"
pytest-order = "^1.0.1"
pdoc3 = "^0.10.0"
pytest = "^7.1.3"
black = "^22.10.0"
pytest-cov = "^4.0.0"
ipykernel = "^6.22.0"
mypy = "^1.4.1"

[tool.black]
line-length = 88
skip-string-normalization = true
include = '.*\.pyi?$'
target-version = ['py37']
extend-exclude = '''
^/(
    \.vscode
  | nibiru/proto
)$
'''

[tool.isort]
profile = "black"
py_version = 39
skip_glob = ["nibiru/proto/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
